fix animated emotes for discord